# disk-recover

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEVELOPMENT.md  README.md  build.bat  build_release.bat  compile_test.bat  nonexistent.db  test_out.txt  vcpkg.json
.codegraph/: .gitignore  codegraph.db  codegraph.db-shm  daemon.pid
docs/: file_validater.md  jpg_validator_fix_plan.md  scan-bug-analysis-and-fix-plan.md
docs/superpowers/plans/: 2026-05-28-disk-recover-implementation.md  2026-06-06-real-file-validation-test.md
docs/superpowers/specs/: 2026-05-28-disk-recover-design.md  2026-06-06-real-file-validation-test-design.md
plans/: fix-512b-corrupted-files.md
src/: CMakeLists.txt
src/business/: CMakeLists.txt  multi_target_writer.cpp  multi_target_writer.hpp  preview_manager.cpp  preview_manager.hpp  recover_manager.cpp  recover_manager.hpp  recovery_manager.cpp  recovery_manager.hpp  scan_cache_db.cpp  scan_cache_db.hpp  scan_manager.cpp  scan_manager.hpp  scan_recover_manager.cpp  scan_recover_manager.hpp
src/common/: CMakeLists.txt  logger.hpp  types.hpp  utils.cpp  utils.hpp
src/disk-io/: CMakeLists.txt  aligned_buffer.cpp  aligned_buffer.hpp  bad_sector_manager.cpp  bad_sector_manager.hpp  buffered_reader.cpp  buffered_reader.hpp  disk_handle.cpp  disk_handle.hpp  disk_info.cpp  disk_info.hpp  sector_reader.cpp  sector_reader.hpp
src/filesystem/: CMakeLists.txt
src/filesystem/exfat/: CMakeLists.txt  exfat_parser.cpp  exfat_parser.hpp  exfat_types.hpp
src/filesystem/fat/: CMakeLists.txt  fat_parser.cpp  fat_parser.hpp  fat_types.hpp
src/filesystem/ntfs/: CMakeLists.txt  mft_parser.cpp  mft_parser.hpp  ntfs_types.hpp
src/filesystem/raw/: CMakeLists.txt  binary_reader.hpp  binary_reader_ex.hpp  bmff_brands.hpp  crc32.hpp  evidence_weights.hpp  file_signatures.cpp  file_signatures.hpp  format_descriptor.hpp  format_registry.cpp  format_registry.hpp  signature_scanner.cpp  signature_scanner.hpp  signature_scanner_impl.hpp  testdisk_adapter.cpp  testdisk_adapter.hpp  testdisk_validators.cpp  testdisk_validators.hpp  validation.hpp  validator_linkage.cpp  validators.hpp
src/filesystem/raw/validators/: bmff_validator.cpp  bmff_validator.hpp  bmp_validator.cpp  bmp_validator.hpp  doc_validator.cpp  doc_validator.hpp  ebml_validator.cpp  ebml_validator.hpp  flac_validator.cpp  flac_validator.hpp  flv_validator.cpp  flv_validator.hpp  gif_validator.cpp  gif_validator.hpp  jpeg_validator.cpp  jpeg_validator.hpp  mp3_validator.cpp  mp3_validator.hpp  pdf_validator.cpp  pdf_validator.hpp  png_validator.cpp  png_validator.hpp  rar_validator.cpp  rar_validator.hpp  riff_validator.cpp  riff_validator.hpp  sevenz_validator.cpp  sevenz_validator.hpp  tiff_validator.cpp  tiff_validator.hpp  ts_validator.cpp  ts_validator.hpp  wmv_validator.cpp  wmv_validator.hpp  zip_validator.cpp  zip_validator.hpp
src/ui/: CMakeLists.txt
src/ui/cli/: CMakeLists.txt  main.cpp
src/ui/gui/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp  resource.h  resource.rc  save_dirs_dialog.cpp  save_dirs_dialog.hpp
tests/: CMakeLists.txt  aligned_buffer_test.cpp  bad_sector_test.cpp  disk_handle_test.cpp  exfat_test.cpp  fat_test.cpp  file_signatures_test.cpp  format_registry_test.cpp  ntfs_test.cpp  real_file_validation_test.cpp  recover_manager_test.cpp  scan_cache_db_test.cpp  signature_scanner_test.cpp
tests/data/real_samples/: .gitkeep
tools/: CMakeLists.txt  sample_collector.cpp
winpe/: README.md  build_pe_package.bat
